// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Func → Decompiler → Pseudocode snapshot dicts 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 119863 */
function (arg1, arg0) {
    var5, var6 = dict_get?(arg1, 8, arg0);
    return var5, var6
}
"
`;

exports[`Func → Decompiler → Pseudocode snapshot ifs 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 83863 */
function (arg1, arg0) {
    var10 = arg1 - 10;
    var11 = arg0 + 20;
    var12 = arg1 * arg0;
    if (arg1 > arg0) {
        var15 = var12 + arg1 / var11;
        var20 = var15;
    } else {
        var18 = var12 + arg0 / var10;
        var20 = var18;
    }
    return var20
}
"
`;

exports[`Func → Decompiler → Pseudocode snapshot multi arg use 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 83863 */
function (arg1, arg0) {
    var9 = ((arg1 + arg0) + arg1) + arg0;
    return var9
}
"
`;

exports[`Func → Decompiler → Pseudocode snapshot simple arithmetic 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 83863 */
function (arg1, arg0) {
    var0 = arg1 + arg0;
    return var0
}
"
`;
